# openmp

./: .gitignore  balancing.cpp  copyin.cpp  hello.cpp  matrix.cpp  nested.cpp  script.bat  seq.cpp  sum.cpp
lab/: CMakeLists.txt  datampi.txt  dataopenmp.txt  etalon_mpi.cpp  etalon_omp.cpp  mpi.cpp  openmp.cpp  readme.md
lab2/: CMakeLists.txt  main.cpp  matrix.hpp  rig.py  sample.ipynb
